fixed body text centering and letter spacing of h1 and nav

--- a/Personal_Site/personal.css
+++ b/Personal_Site/personal.css
@@ -14,6 +14,13 @@
   padding-top: 15px;
   clear: both;
 }
+#footer2 {
+  height: 80px;
+  background-color: #989898;
+  padding-top: 15px;
+  clear: both;
+}
+}
 .nav {
   display: table;
   width: 450px;
@@ -22,7 +29,6 @@
 
 .featurepic {
   height: 320px;
-
 }
 
 .featurepic img {
@@ -30,6 +36,11 @@
   width: 100%;
 }
 
+.introtext {
+  width: 600px;
+  margin: 0 auto;
+  padding-bottom: 40px;
+}
 
 .main {
   background-color: #F0F0F0;
@@ -66,13 +77,15 @@ ul li {
   color: white;
   text-transform: uppercase;
   text-transform: full-width;
+  letter-spacing: 1px;
 }
 h1 {
   font-family: "Rock Salt" sans-serif;
   font-size: 28px;
   text-align: center;
+  letter-spacing: 2px;
   margin: 0px;
-  padding: 90px 0px 40px 0px;
+  padding: 60px 0px 40px 0px;
 }
 p {
   font-family: "Lato" sans-serif;
